--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -33,8 +33,7 @@ jobs:
 
       - name: Prepare plenary
         run: |
-          git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          ln -s "$(pwd)" ~/.local/share/nvim/site/pack/vendor/start
+          git clone --depth 1 https://github.com/nvim-lua/plenary.nvim _runtime/plenary.nvim
 
       - uses: rhysd/action-setup-vim@v1
         with:
@@ -42,5 +41,7 @@ jobs:
           version: ${{ matrix.neovim_version }}
 
       - name: Run tests
+        env:
+          PLENARY: _runtime/plenary.nvim
         run: |
           nvim --headless --noplugin -u tests/minimal.vim -c "PlenaryBustedDirectory tests/ {minimal_init = 'tests/minimal.vim'}"
