--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -17,8 +17,7 @@ jobs:
       - uses: kdheepak/panvimdoc@v4.0.1
         with:
           vimdoc: "auto-dark-mode"
-          version: "NVIM v0.7.0 -> v0.10.4"
-          description: "Plugin that automatically changes the editor appearance based on system settings."
+          description: "sync nvim with your desktop environment's appearance"
           demojify: true
 
       - uses: stefanzweifel/git-auto-commit-action@v4
