--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -2,7 +2,9 @@ name: panvimdoc
 
 on:
   push:
-    paths: ["**.md"]
+    paths: 
+      - "**.md"
+      - ".github/**"
 
 permissions:
   contents: write
