--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,7 +1,8 @@
 name: Run Tests
 
-on: 
-  pull_request: {}
+on:
+  pull_request:
+    types: [opened, edited, synchronize]
   push:
     branches: [master]
 
@@ -16,7 +17,7 @@ jobs:
           - macos-latest
           - ubuntu-latest
           - windows-latest
-        neovim_version: 
+        neovim_version:
           - v0.7.2
           - v0.8.3
           - v0.9.5
